Fixed warnings and typos.